WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
309297
[visionOS release] overlay-region/full-page-horizontal.html is flaky text failure.
https://bugs.webkit.org/show_bug.cgi?id=309297
Summary
[visionOS release] overlay-region/full-page-horizontal.html is flaky text fai...
Diego De La Toba
Reported
2026-03-05 14:05:53 PST
overlay-region/full-page-horizontal.html is flaky text failure on visionOS release. HISTORY:
https://results.webkit.org/?suite=layout-tests&test=overlay-region%2Ffull-page-horizontal.html
DIFF: --- /Volumes/Data/worker/Apple-visionOS-26-Simulator-Release-WK2-Tests/build/layout-test-results/overlay-region/full-page-horizontal-expected.txt +++ /Volumes/Data/worker/Apple-visionOS-26-Simulator-Release-WK2-Tests/build/layout-test-results/overlay-region/full-page-horizontal-actual.txt @@ -1,2 +1,2 @@ - (scrolling behavior 1) + (scrolling behavior 2) (overlay region [x: 0 y: 0 width: 50 height: 600]) DIFF URL:
https://build.webkit.org/results/Apple-visionOS-26-Simulator-Release-WK2-Tests/308737%40main%20(4732)/overlay-region/full-page-horizontal-pretty-diff.html
REPRODUCTION: Reproduced on visionOS 26.2 release with the following: run-webkit-tests --force --no-retry --child-processes=1 --iterations 100 --visionos-simulator overlay-region/ The failure does not reproduce running the single test, appears to be causes by other overlay-region tests. Marking this as pass failure while this pends investigation.
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2026-03-05 14:05:58 PST
<
rdar://problem/171843270
>
Diego De La Toba
Comment 2
2026-03-05 14:11:23 PST
Pull request:
https://github.com/WebKit/WebKit/pull/60006
EWS
Comment 3
2026-03-05 14:13:20 PST
Test gardening commit
308742@main
(4f521ec4fc8b): <
https://commits.webkit.org/308742@main
> Reviewed commits have been landed. Closing PR #60006 and removing active labels.
Etienne
Comment 4
2026-05-11 08:31:07 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/64677
EWS
Comment 5
2026-05-12 03:30:52 PDT
Committed
313070@main
(8065d5ec2686): <
https://commits.webkit.org/313070@main
> Reviewed commits have been landed. Closing PR #64677 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug