[visionOS release] overlay-region/full-page-horizontal.html is flaky text failure. https://bugs.webkit.org/show_bug.cgi?id=309297 <rdar://171843270>

Reviewed by Mike Wyrzykowski.

The flakyness revealed a real issue where, when a ScrollView went from
vertically scrollable to horizontally scrollable, we wouldn't update
the OverlayRegion behavior.

Test: overlay-region/scrollable-axes-change.html
      overlay-region/full-page-horizontal.html

* LayoutTests/overlay-region/scrollable-axes-change-expected.txt: Added.
* LayoutTests/overlay-region/scrollable-axes-change.html: Added.
Add a test that specifically targets this bugs and fails 100% without
the fix.
* LayoutTests/platform/visionos/TestExpectations:
Re-enable the flaky test.

* Source/WebKit/UIProcess/RemoteLayerTree/ios/RemoteScrollingCoordinatorProxyIOS.h:
* Source/WebKit/UIProcess/RemoteLayerTree/ios/RemoteScrollingCoordinatorProxyIOS.mm:
(WebKit::RemoteScrollingCoordinatorProxyIOS::selectOverlayRegionScrollViewIfNeeded):
(WebKit::RemoteScrollingCoordinatorProxyIOS::connectStateNodeLayers):
Keep track of TotalContentsSize updates so that, even if the selected
ScrollView doesn't change, we still update the OverlayRegion behavior.

Canonical link: https://commits.webkit.org/313070@main